# lazyjust

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml
.serena/: project.yml
lib/: __init__.py  app.py  justfile.py
skills/justfile-config/: skill.md
tests/: test_app.py  test_justfile.py
