[project]
name = "lazyjust"
version = "0.1.0"
description = "Lazy-style TUI for navigating monorepo justfiles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lazyjust = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = ["lib"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
